// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResourcePicker component snaps should render ResourcePicker in filtered mode 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <ResourceList
    className="tc-resource-picker-list-container theme-tc-resource-picker-list-container"
    collection={
      Array [
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "flags": Array [
            "CERTIFIED",
            "FAVORITE",
          ],
          "icon": "talend-file-xls-o",
          "id": 0,
          "modified": "2016-09-22",
          "name": "Title with few actions",
        },
        Object {
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 1,
          "modified": "2016-09-22",
          "name": "Title with lot of actions",
        },
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 2,
          "modified": "2016-09-22",
          "name": "Title with persistant actions",
        },
      ]
    }
    toolbar={
      Object {
        "nameFilerAsInput": true,
        "state": Object {
          "certified": true,
          "favorites": true,
        },
      }
    }
  />
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker with some Resources 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <ResourceList
    className="tc-resource-picker-list-container theme-tc-resource-picker-list-container"
    collection={
      Array [
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "flags": Array [
            "CERTIFIED",
            "FAVORITE",
          ],
          "icon": "talend-file-xls-o",
          "id": 0,
          "modified": "2016-09-22",
          "name": "Title with few actions",
        },
        Object {
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 1,
          "modified": "2016-09-22",
          "name": "Title with lot of actions",
        },
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 2,
          "modified": "2016-09-22",
          "name": "Title with persistant actions",
        },
      ]
    }
    isLoading={true}
    toolbar={
      Object {
        "nameFilerAsInput": true,
      }
    }
  />
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker without any Resource 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <ResourceList
    className="tc-resource-picker-list-container theme-tc-resource-picker-list-container"
    collection={Array []}
    toolbar={
      Object {
        "nameFilerAsInput": true,
      }
    }
  />
</div>
`;

exports[`ResourcePicker component snaps should render ResourcePicker without toolbar 1`] = `
<div
  className="tc-resource-picker theme-tc-resource-picker"
>
  <ResourceList
    className="tc-resource-picker-list-container theme-tc-resource-picker-list-container"
    collection={
      Array [
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "flags": Array [
            "CERTIFIED",
            "FAVORITE",
          ],
          "icon": "talend-file-xls-o",
          "id": 0,
          "modified": "2016-09-22",
          "name": "Title with few actions",
        },
        Object {
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 1,
          "modified": "2016-09-22",
          "name": "Title with lot of actions",
        },
        Object {
          "author": "Jean-Pierre DUPONT",
          "display": "text",
          "icon": "talend-file-xls-o",
          "id": 2,
          "modified": "2016-09-22",
          "name": "Title with persistant actions",
        },
      ]
    }
    toolbar={
      Object {
        "nameFilerAsInput": true,
      }
    }
  />
</div>
`;
